# vortex-fm

./: .gitignore  BUGFIX_TOGGLE_NOT_WORKING.md  CHANGES_MADE.md  COLOR_CHANGES_FIXED.md  COMPREHENSIVE_THEME_SOLUTION.md  COSMIC_ACCENT_STRATEGY.md  COSMIC_PALETTE_CHANGES.md  Cargo.toml  DEBUGGING_METHODOLOGY_SUMMARY.md  DEBUG_CLEAN.md  DEBUG_COLOR_CHANGES_FINDINGS.md  DEBUG_GUIDE.md  DEBUG_INSTRUCTIONS.md  DEBUG_QUICK_REFERENCE.md  DOCUMENTATION_INDEX.md  FINAL_STATUS.md  LICENSE  PROGRESS.md  QUICK_START_RIBBON_TOOLBAR.md  README.md  README_COSMIC_PALETTE.md  REFACTORING_GUIDE.md  RIBBON_TOOLBAR_IMPROVEMENTS.md  RIBBON_TOOLBAR_VISUAL_GUIDE.md  RUN_DEBUG.sh  SIMPLIFIED_CUSTOM_COLOR_PICKER.md  SOLUTION_SUMMARY.md  SYNC_INSTRUCTIONS.md  TERMINAL_ARCHITECTURE.md  TERMINAL_CHANGES_SUMMARY.md  TERMINAL_COMPLETE_FIX_REPORT.md  TERMINAL_COMPLETE_SUMMARY.md  TERMINAL_DEBUG_ANALYSIS.md  TERMINAL_FINAL_VISUAL_GUIDE.md  TERMINAL_FIX_SUMMARY.md  TERMINAL_QUICK_TEST_GUIDE.md  TERMINAL_STATUS_REPORT.md  TERMINAL_WEZTERM_ALACRITTY_COMPLETE.md  THEME_INTEGRATION_SUMMARY.md  WEBSITE.md  (+9 more)
content/: _index.md
debian/: changelog  control  copyright  rules
docs/: index.html  sitemap.xml
examples/: custom_color_example.rs  debug_color_changes_example.rs  simplified_custom_color_example.rs  theme_example.rs  theme_ui_example.rs
public/: robots.txt
res/: com.journalehsan.VortexFiles.desktop  com.journalehsan.VortexFiles.metainfo.xml  com.system76.VortexFiles.desktop  com.system76.VortexFiles.metainfo.xml
resources/: style.css
scripts/: INSTALL_IMPROVEMENTS.md  QUICK_START.md  (+2 more)
(+118 files in other folders)
