[package]
name = "vortex-fm"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.7", package = "gtk4" }
gio = "0.20"
glib = "0.20"
gdk = "0.7"
libadwaita = { version = "0.5", optional = true }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
image = "0.24"
md5 = "0.7"
vte = "0.13"
xdg = "2.5"
nix = { version = "0.27", features = ["fs"] }

[build-dependencies]
glib-build-tools = "0.17"
